--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Random Recipe</title>
   </head>
   <body>
-    <div id="root" style="font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;"></div>
+    <div
+      id="root"
+      style="
+        font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+      "
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- 100% privacy-first analytics -->
+    <script
+      async
+      defer
+      src="https://scripts.simpleanalyticscdn.com/latest.js"
+    ></script>
+    <noscript
+      ><img
+        src="https://queue.simpleanalyticscdn.com/noscript.gif"
+        alt=""
+        referrerpolicy="no-referrer-when-downgrade"
+    /></noscript>
   </body>
 </html>
